--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "axios": "^1.7.9",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
+    "fs": "0.0.1-security",
+    "jimp": "^1.6.0",
     "module": "^1.2.5",
     "mongoose": "^8.10.1",
     "path": "^0.12.7",
