--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "discord bot example"
   ],
   "dependencies": {
+    "@iamtraction/google-translate": "^2.0.1",
     "@napi-rs/canvas": "^0.1.67",
     "axios": "^1.7.9",
+    "chalk": "^5.4.1",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "fs": "0.0.1-security",
@@ -62,7 +64,8 @@
     "mongoose": "^8.10.1",
     "path": "^0.12.7",
     "simply-xp": "1.3.7",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "winston": "^3.17.0"
   },
   "engines": {
     "node": ">=16"
