--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "module": "^1.2.5",
     "mongoose": "^8.10.1",
     "path": "^0.12.7",
+    "simply-djs": "^4.1.1",
     "simply-xp": "1.3.7",
     "url": "^0.11.4",
     "winston": "^3.17.0"
