Rename commands for clarity and add new lvlroles command with enhanced logging

--- a/package.json
+++ b/package.json
@@ -55,12 +55,17 @@
     "@iamtraction/google-translate": "^2.0.1",
     "@napi-rs/canvas": "^0.1.67",
     "axios": "^1.7.9",
+    "boxen": "^8.0.1",
     "chalk": "^5.4.1",
+    "cli-spinners": "^3.2.0",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
+    "figlet": "^1.8.0",
     "fs": "0.0.1-security",
+    "gradient-string": "^3.0.0",
     "module": "^1.2.5",
     "mongoose": "^8.10.1",
+    "ora": "^8.2.0",
     "path": "^0.12.7",
     "url": "^0.11.4",
     "winston": "^3.17.0"
