--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "gradient-string": "^3.0.0",
     "module": "^1.2.5",
     "mongoose": "^8.10.1",
+    "node-fetch": "^3.3.2",
     "ora": "^8.2.0",
     "path": "^0.12.7",
     "url": "^0.11.4",
