Refactor package.json and implement server statistics tracking; add server stats command with caching and interaction handling

--- a/package.json
+++ b/package.json
@@ -1,56 +1,11 @@
 {
-  "name": "queen-v2",
-  "version": "2.0.0",
-  "description": "Queen bot",
-  "main": "bot.js",
+  "name": "daki",
+  "version": "1.0.0",
+  "description": "Discord bot",
   "type": "module",
   "scripts": {
     "start": "node bot.js"
   },
-  "author": "Z3R0",
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/RayZ3R0/queen-v2"
-  },
-  "bugs": {
-    "url": "https://github.com/RayZ3R0/queen-v2/issues"
-  },
-  "homepage": "https://github.com/RayZ3R0/queen-v2",
-  "keywords": [
-    "discord",
-    "bot",
-    "handler",
-    "javascript",
-    "discordjs",
-    "v14",
-    "slashcommands",
-    "advanced",
-    "comprehensive",
-    "flexible",
-    "easy-to-use",
-    "well-documented",
-    "maintained",
-    "command handler",
-    "event handler",
-    "slash command handler",
-    "modal handler",
-    "button handler",
-    "interaction handler",
-    "permission handling",
-    "rate limiting",
-    "cooldown handling",
-    "localization",
-    "internationalization",
-    "scalability",
-    "performance",
-    "discord bot development",
-    "discord bot making",
-    "discord bot programming",
-    "discord bot tutorial",
-    "discord bot guide",
-    "discord bot example"
-  ],
   "dependencies": {
     "@iamtraction/google-translate": "^2.0.1",
     "@napi-rs/canvas": "^0.1.67",
@@ -63,6 +18,7 @@
     "figlet": "^1.8.0",
     "fs": "0.0.1-security",
     "gradient-string": "^3.0.0",
+    "lru-cache": "^11.0.2",
     "module": "^1.2.5",
     "mongoose": "^8.10.1",
     "node-fetch": "^3.3.2",
