Add image processing utility and enhance custom role command error handling

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "figlet": "^1.8.0",
     "fs": "0.0.1-security",
     "gradient-string": "^3.0.0",
+    "image-size": "^2.0.1",
     "lru-cache": "^11.0.2",
     "module": "^1.2.5",
     "mongoose": "^8.10.1",
     "node-fetch": "^3.3.2",
     "ora": "^8.2.0",
     "path": "^0.12.7",
+    "sharp": "^0.33.5",
     "url": "^0.11.4",
     "winston": "^3.17.0"
   },
